# python-readchar

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pytest.ini  .travis.yml  .yamllint.yaml  .yamllint.yml  CONTRIBUTING.md  Makefile  README.md  README.rst  example.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  publish.yaml  publish.yml  python-publish.yml  python-test.yml  run-tests.yaml  run-tests.yml
readchar/: __init__.py  _config.py  _macos_key.py  _posix_key.py  _posix_read.py  _win_key.py  _win_read.py  key.py  key_linux.py  key_windows.py  keys.py  posix_key.py  posix_read.py  read_linux.py  readchar.py  readchar_linux.py  readchar_osx.py  readchar_windows.py  win_key.py  win_read.py
tests/: manual-test.py
tests/linux/: conftest.py  test_import.py  test_keys.py  test_readchar.py  test_readkey.py
tests/posix/: conftest.py  test_import.py  test_keys.py  test_readchar.py  test_readkey.py
tests/unit/: test_key.py  test_readkey.py
tests/windows/: conftest.py  test_import.py  test_keys.py  test_readchar.py  test_readkey.py
