[metadata]
name = readchar
author_email = miguelangel.garcia@gmail.com
license = MIT
license_files = LICENCE
version = attr: readchar.__version__

description = Library to easily read single chars and key strokes
long_description = file: README.rst
long_description_content_type = text/x-rst

keywords =
  charaters
  keystrokes
  stdin
  command line

classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development
  Topic :: Software Development :: User Interfaces

url = https://github.com/magmax/python-readchar
project_urls =
  Download = https://pypi.org/project/readchar/#files
  Bug Tracker = https://github.com/magmax/python-readchar/issues
  Source Code = https://github.com/magmax/python-readchar


[options]
packages = find:
python_requires = >=3.6
install_requires =
  setuptools
  wheel
tests_require =
  pytest


[options.packages.find]
exclude =
  .git/
  .github/
  .venv/
  tests/
