[metadata]
name = readchar
version = attr: readchar.__version__
description = Library to easily read single chars and key strokes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/magmax/python-readchar
author_email = miguelangel.garcia@gmail.com
license = MIT
license_file = LICENCE
license_files = LICENCE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
keywords =
    charaters
    keystrokes
    stdin
    command line
project_urls =
    Download = https://pypi.org/project/readchar/#files
    Bug Tracker = https://github.com/magmax/python-readchar/issues
    Source Code = https://github.com/magmax/python-readchar

[options]
packages = find:
install_requires =
    setuptools
    wheel
python_requires = >=3.6
tests_require =
    pytest

[options.packages.find]
exclude =
    .git/
    .github/
    .venv/
    tests/
