[metadata]
name = readchar
version = attr: readchar.__version__
description = Library to easily read single chars and key strokes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magmax/python-readchar
author_email = miguelangel.garcia@gmail.com
license = MIT
license_files = LICENCE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
keywords =
    characters
    keystrokes
    stdin
    command line
project_urls =
    Download = https://pypi.org/project/readchar/#files
    Bug Tracker = https://github.com/magmax/python-readchar/issues
    Source Code = https://github.com/magmax/python-readchar

[options]
packages = find:
install_requires =
    setuptools>=41.0
python_requires = >=3.7
include_package_data = True
zip_safe = false

[options.packages.find]
exclude =
    .git/
    .github/
    .venv/
    tests/

[options.package_data]
readchar =
    py.typed

[tool:pytest]
testpaths = tests
addopts = -r fEsxwX -s --cov=readchar

[flake8]
max-complexity = 12
max-line-length = 88
exclude =
    __pycache__/
    .git/
    .venv/
    .pytest_cache/
show-source = true
statistics = true
count = true
per-file-ignores =
    readchar/*_key.py:F403,F405

[tool.coverage.run]
omit = tests/*

[isort]
profile = black
src_paths = readchar,tests
lines_after_imports = 2
